--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ h6 {
 }
 
 .nav-menu ul li {
-  min-width: 180px;
+  min-width: 90px;
 }
 
 /* Nav Menu Arrows */
@@ -352,6 +352,7 @@ h6 {
 
 .nav-menu ul li:hover > a {
   background: #0F7EAB;
+  position: relative;
   color: #fff;
 }
 
@@ -474,7 +475,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background: url(../img/bgeach.jpeg) top center no-repeat;<!--intro-->
+  background: url(../img/bgeach.jpeg) top center no-repeat;
   background-size: 100%;
   background-size: cover;
   overflow: hidden;
@@ -1692,4 +1693,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .cinza:hover {
   background: #3B3B3B;
+}
+
+.margem {
+  margin-top: 100px;
+}
+
+.tamanho-imagens {
+  height: 380px;
+}
+
+.por-favor {
+  font-size: 20px;
 }
